--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,47 @@ on:
     branches: [ "main" ]
 
 jobs:
+  # --- JOB 1: TESTEN (Continuous Integration) ---
+  test:
+    name: Run Pytest
+    runs-on: ubuntu-latest # Draait in de cloud, scheelt CPU op je server
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      # Installeer Python (kies de versie die je ook in je Dockerfile gebruikt)
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.10' 
+          cache: 'pip' # Cache dependencies voor snelheid
+
+      # Installeer dependencies + pytest
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install pytest # Voor de zekerheid, als hij niet in requirements staat
+
+      # Maak een dummy .env voor de tests
+      # Python code crasht vaak als hij environment variabelen mist bij het opstarten
+      - name: Create dummy .env for tests
+        run: |
+          echo "MONGO_URI=mongodb://localhost:27017/testdb" > .env
+          echo "JWT_SECRET=testsecret_voor_unit_tests" >> .env
+          echo "CORS_POLICY=*" >> .env
+          echo "DB_NAME=TestKeuzeKompas" >> .env
+          echo "JWT_ALGORITHM=HS256" >> .env
+
+      # Draai de tests
+      - name: Run Tests
+        run: python -m pytest
+
+  # --- JOB 2: DEPLOYEN (Continuous Deployment) ---
   deploy:
+    name: Deploy to Home Server
+    needs: test # <--- WACHT OP SUCCES VAN TEST JOB
     runs-on: self-hosted
 
     steps:
@@ -34,7 +74,6 @@ jobs:
         run: docker build -t ai-service .
 
       # STAP 4: Start de container
-      # Let op: ik heb '--env-file .env' toegevoegd zodat hij stap 1 gebruikt
       - name: Run Container
         run: |
           docker run -d \
