--- a/requirements.txt
+++ b/requirements.txt
@@ -31,7 +31,7 @@ MarkupSafe==3.0.3
 mpmath==1.3.0
 multidict==6.7.0
 multiprocess==0.70.18
-networkx==3.6.1
+networkx
 nltk==3.9.2
 numpy==2.3.4
 numspy==1.0
